syntax = "proto3";

package udp_simulator.v1;

option go_package = "github.com/MdSadiqMd/AV-Chaos-Monkey/pkg/protobuf";

service OrchestratorService {
  rpc CreateTest(CreateTestRequest) returns (CreateTestResponse);
  rpc GetSDPOffer(GetSDPOfferRequest) returns (GetSDPOfferResponse);
  rpc SetRemoteAnswer(SetRemoteAnswerRequest) returns (SetRemoteAnswerResponse);
  rpc StartTest(StartTestRequest) returns (StartTestResponse);
  rpc InjectSpike(InjectSpikeRequest) returns (InjectSpikeResponse);
  rpc GetMetrics(GetMetricsRequest) returns (MetricsResponse);
  rpc StopTest(StopTestRequest) returns (StopTestResponse);
  rpc GetICECandidates(GetICECandidatesRequest) returns (stream ICECandidate);
  rpc AddICECandidate(AddICECandidateRequest) returns (AddICECandidateResponse);
}

message CreateTestRequest {
  string test_id = 1;
  int32 num_participants = 2;
  VideoConfig video = 3;
  AudioConfig audio = 4;
  int32 duration_seconds = 5;
  repeated SpikeEvent spikes = 6;
  bool enable_network_degradation = 7;
  string backend_rtp_base_port = 8;
  SpikeDistributionConfig spike_distribution = 9;  // Configuration for spike distribution
}

// Configuration for how spikes are distributed across the test duration
message SpikeDistributionConfig {
  // Distribution strategy: "even", "random", "front_loaded", "back_loaded", "legacy"
  // "legacy" uses exact start_offset_seconds from each spike (old behavior)
  // Default: "even" - distributes spikes evenly across test duration
  string strategy = 1;
  
  // Minimum spacing between spike injections in seconds
  // Default: 5 seconds
  int32 min_spacing_seconds = 2;
  
  // Jitter percentage (0-100) to add randomness to spike timing
  // Default: 15
  int32 jitter_percent = 3;
  
  // Whether to respect start_offset_seconds as minimum delay
  // If true, spikes won't start before their defined offset
  // Default: true
  bool respect_min_offset = 4;
}

message VideoConfig {
  int32 width = 1;
  int32 height = 2;
  int32 fps = 3;
  int32 bitrate_kbps = 4;
  string codec = 5;
}

message AudioConfig {
  int32 sample_rate = 1;
  int32 channels = 2;
  int32 bitrate_kbps = 3;
  string codec = 4;
}

message CreateTestResponse {
  string test_id = 1;
  repeated ParticipantSetup participants = 2;
  int32 backend_port_start = 3;
  int32 backend_port_end = 4;
  string sfu_grpc_endpoint = 5;
}

message ParticipantSetup {
  uint32 participant_id = 1;
  string ice_ufrag = 2;
  string ice_password = 3;
  string srtp_master_key = 4;
  string srtp_master_salt = 5;
  int32 backend_rtp_port = 6;
}

message GetSDPOfferRequest {
  string test_id = 1;
  uint32 participant_id = 2;
}

message GetSDPOfferResponse {
  string sdp = 1;
}

message SetRemoteAnswerRequest {
  string test_id = 1;
  uint32 participant_id = 2;
  string sdp = 3;
}

message SetRemoteAnswerResponse {
  bool success = 1;
  string error_message = 2;
}

message StartTestRequest {
  string test_id = 1;
}

message StartTestResponse {
  bool started = 1;
  int64 start_time_unix_ms = 2;
  string status_message = 3;
}

message SpikeEvent {
  string spike_id = 1;
  string type = 2;
  repeated uint32 participant_ids = 3;
  int32 start_offset_seconds = 4;
  int32 duration_seconds = 5;
  map<string, string> params = 6;
}

message InjectSpikeRequest {
  string test_id = 1;
  SpikeEvent spike = 2;
}

message InjectSpikeResponse {
  bool injected = 1;
  string message = 2;
}

message GetMetricsRequest {
  string test_id = 1;
}

message MetricsResponse {
  string test_id = 1;
  int64 elapsed_seconds = 2;
  repeated ParticipantMetrics participants = 3;
  AggregateMetrics aggregate = 4;
}

message ParticipantMetrics {
  uint32 participant_id = 1;
  int64 frames_sent = 2;
  int64 bytes_sent = 3;
  int64 packets_sent = 4;
  int64 packets_retransmitted = 5;
  double jitter_ms = 6;
  double packet_loss_percent = 7;
  int64 nack_count = 8;
  int64 pli_count = 9;
  double mos_score = 10;
  int32 current_bitrate_kbps = 11;
  double avg_encode_latency_ms = 12;
  int32 active_spike_count = 13;
}

message AggregateMetrics {
  int64 total_frames_sent = 1;
  int64 total_packets_sent = 2;
  double avg_jitter_ms = 3;
  double avg_packet_loss = 4;
  double avg_mos_score = 5;
  int64 total_bitrate_kbps = 6;
}

message StopTestRequest {
  string test_id = 1;
}

message StopTestResponse {
  bool stopped = 1;
  MetricsResponse final_metrics = 2;
}

message GetICECandidatesRequest {
  string test_id = 1;
  uint32 participant_id = 2;
}

message ICECandidate {
  string candidate = 1;
  string sdp_mid = 2;
  int32 sdp_m_line_index = 3;
}

message AddICECandidateRequest {
  string test_id = 1;
  uint32 participant_id = 2;
  string candidate = 3;
  string sdp_mid = 4;
  int32 sdp_m_line_index = 5;
}

message AddICECandidateResponse {
  bool added = 1;
  string error = 2;
}
